Fix CORS for production deployment